# blaze

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LIMITATIONS.md  Makefile  README.md  SECURITY.md  cbindgen.toml  codecov.yml  pyproject.toml  wasm-pack.toml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmarks.yml  ci.yml  coverage.yml  playground.yml  release.yml
benches/: query_benchmarks.rs  tpch_benchmarks.rs
data/: README.md  customers.csv  customers.parquet  sales.csv
docs/: API_STABILITY.md  ARCHITECTURE.md  COMMUNITY.md  MIGRATION_DUCKDB.md  OBSERVABILITY.md  PERFORMANCE_TUNING.md  PLAYGROUND.md  PLUGIN_DEVELOPMENT.md  UDF_COOKBOOK.md  VSCODE_EXTENSION.md
docs/adr/: 0001-rust-as-implementation-language.md  0002-apache-arrow-as-native-data-format.md  0003-layered-query-processing-architecture.md  0004-two-phase-planning.md  0005-trait-based-pluggable-storage.md  0006-batch-oriented-vectorized-execution.md  0007-hash-based-join-aggregation.md  0008-rule-based-optimizer.md  0009-embedded-in-process-architecture.md  0010-multi-target-integration-strategy.md  0011-prepared-statement-cache.md  0012-delta-lake-native-integration.md
examples/: advanced_queries.rs  basic_queries.rs  browser_playground.html  generate_sample_data.rs  python_notebook.ipynb
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_sql_parser.rs
include/: blaze.h
node/: README.md  package.json  tsconfig.json  types.d.ts
node/examples/: README.md  demo.js  quickstart.mjs
node/src/: index.ts
python/: README.md
python/blaze-kernel/: README.md  pyproject.toml
python/blaze-kernel/blaze_kernel/: __init__.py  __main__.py  install.py  kernel.py
python/dbt-blaze/: README.md  pyproject.toml
python/dbt-blaze/dbt_blaze/: __init__.py  adapter.py
python/examples/: README.md  quickstart.py
python/pyblaze/: __init__.py  __init__.pyi
python/tests/: __init__.py  test_pyblaze.py
scripts/: bump-version.sh  commit-msg  new-module.sh  pre-commit
src/: approx.rs  benchmark.rs  cache.rs  constants.rs  dataframe.rs  distributed.rs  error.rs  federation.rs  flight.rs  fts.rs  git_warehouse.rs  ingestion.rs  ipc.rs  jit.rs  json.rs  learned_optimizer.rs  lib.rs  lsp.rs  main.rs  materialized.rs  migration.rs  output.rs  persistence.rs  plugin.rs  pool.rs  prepared.rs  profiler.rs  progress.rs  python.rs  query_advisor.rs  recursive_cte.rs  resource_governor.rs  rest.rs  security.rs  streaming.rs  timeseries.rs  transaction.rs  tvf.rs  udf.rs  vector.rs  (+1 more)
src/adaptive/: adaptive_planner.rs  mod.rs  partition_coalesce.rs  runtime_stats.rs  skew_handler.rs
src/catalog/: external.rs  information_schema.rs  mod.rs  table.rs
src/executor/: mod.rs  operators.rs  stream.rs
src/executor/operators/: aggregate.rs  cross_join.rs  hash_join.rs  memory.rs  mod.rs  sort.rs  window.rs
src/ffi/: mod.rs
src/gpu/: device.rs  executor.rs  kernels.rs  memory.rs  mod.rs
src/lakehouse/: delta.rs  iceberg.rs  mod.rs  snapshot.rs
src/nlq/: generator.rs  intent.rs  mod.rs  parser.rs
src/optimizer/: cardinality.rs  cost_model.rs  join_ordering.rs  mod.rs  statistics.rs
src/parallel/: exchange.rs  mod.rs  partition.rs  worker.rs
src/planner/: binder.rs  logical_expr.rs  logical_plan.rs  mod.rs  optimizer.rs  physical_expr.rs  physical_plan.rs  physical_planner.rs
src/simd/: codegen.rs  jit.rs  mod.rs  strings.rs  vectorize.rs
src/sql/: mod.rs  parser.rs
src/storage/: csv.rs  delta.rs  memory.rs  mod.rs  object_store.rs  parquet.rs  persistent.rs  type_inference.rs  view.rs
src/types/: datatype.rs  mod.rs  schema.rs  value.rs
src/wasm/: bindings.rs  http_reader.rs  indexeddb.rs  memory.rs  mod.rs  serialization.rs  vfs.rs  worker.rs
tests/: aggregation_tests.rs  ddl_tests.rs  decimal_tests.rs  error_tests.rs  integration_tests.rs  join_tests.rs  query_tests.rs  sql_compliance_tests.rs  window_cte_tests.rs
tests/common/: mod.rs
vscode-extension/: README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: extension.ts
vscode-extension/syntaxes/: blaze-sql.tmLanguage.json
wasm/: README.md  package.json  tsconfig.json
wasm/examples/: README.md  playground.html  quickstart.html
wasm/src/: index.ts
wasm/types/: index.d.ts
website/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
website/docs/: benchmarks.md  changelog.md  comparison.md  contributing.md  faq.md  intro.md  limitations.md  troubleshooting.md
website/docs/advanced/: custom-storage-providers.md  extending-blaze.md  query-optimization.md
website/docs/concepts/: architecture.md  connection-api.md  query-execution.md
website/docs/getting-started/: installation.md  loading-data.md  quick-start.md
website/docs/guides/: c-ffi-integration.md  cli-usage.md  data-export.md  memory-management.md  nodejs-integration.md  playground.md  prepared-statements.md  production-best-practices.md  python-integration.md  wasm-integration.md  window-functions.md  working-with-files.md
website/docs/reference/: api.md  configuration.md  error-handling.md  sql.md
website/src/components/HomepageFeatures/: index.tsx  styles.module.css
website/src/css/: custom.css
website/src/pages/: index.module.css  index.tsx
