[package]
name = "blaze"
version = "0.1.0"
edition = "2021"
description = "Next-generation embedded OLAP query engine with memory safety"
license = "MIT"
repository = "https://github.com/blaze-db/blaze"
keywords = ["database", "olap", "query-engine", "analytics", "arrow"]
categories = ["database", "data-structures"]

[lib]
name = "blaze"
path = "src/lib.rs"

[[bin]]
name = "blaze"
path = "src/main.rs"

[dependencies]
# SQL Parsing
sqlparser = "0.53"

# Apache Arrow ecosystem
arrow = { version = "54", features = ["prettyprint"] }
arrow-schema = "54"
arrow-array = "54"
arrow-buffer = "54"
arrow-cast = "54"
arrow-ord = "54"
arrow-select = "54"
arrow-csv = "54"
arrow-json = "54"
parquet = { version = "54", features = ["arrow", "async"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
pin-project-lite = "0.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
parking_lot = "0.12"
hashbrown = "0.15"
indexmap = "2.0"
ahash = "0.8"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.0"
tempfile = "3.0"
num-traits = "0.2"
half = "2.0"

# Memory management
crossbeam = "0.8"
crossbeam-channel = "0.5"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
pretty_assertions = "1.0"
tempfile = "3.0"
rand = "0.8"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.bench]
lto = true
codegen-units = 1
