[package]
name = "blaze"
version = "0.1.0"
edition = "2021"
description = "Next-generation embedded OLAP query engine with memory safety"
license = "MIT"
repository = "https://github.com/blaze-db/blaze"
keywords = ["database", "olap", "query-engine", "analytics", "arrow"]
categories = ["database", "data-structures"]

[lib]
name = "blaze"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[[bin]]
name = "blaze"
path = "src/main.rs"

[features]
default = []
python = ["pyo3"]
c-ffi = []
wasm = []
gpu = []
flight = []
nlq = []
simd = []
federation = []
lakehouse = []
streaming = []
timeseries = []
adaptive = []
learned-optimizer = []
all-extensions = [
    "gpu", "flight", "nlq", "simd", "federation",
    "lakehouse", "streaming", "timeseries", "adaptive",
    "learned-optimizer",
]

[[bench]]
name = "query_benchmarks"
harness = false

[[bench]]
name = "tpch_benchmarks"
harness = false

[dependencies]
# CLI
clap = { version = "4.4", features = ["derive"] }

# SQL Parsing
sqlparser = "0.53"

# String similarity (for error suggestions)
strsim = "0.11"

# Regular expressions
regex = "1.10"

# Hashing
md5 = "0.7"
sha2 = "0.10"

# Apache Arrow ecosystem
arrow = { version = "57", features = ["prettyprint"] }
arrow-schema = "57"
arrow-array = "57"
arrow-buffer = "57"
arrow-cast = "57"
arrow-ord = "57"
arrow-select = "57"
arrow-csv = "57"
arrow-json = "57"
arrow-ipc = "57"
parquet = { version = "57", features = ["arrow", "async"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
pin-project-lite = "0.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
parking_lot = "0.12"
hashbrown = "0.15"
indexmap = "2.0"
ahash = "0.8"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.0"
tempfile = "3.0"
num-traits = "0.2"
half = "2.0"

# Memory management
crossbeam = "0.8"
crossbeam-channel = "0.5"

# Delta Lake
deltalake = { version = "0.30", features = ["datafusion"] }

# Base64 encoding (for WAL persistence)
base64 = "0.22"

# LRU cache
lru = "0.12"

# URL handling
url = "2.5"

# Python bindings (optional)
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
pretty_assertions = "1.0"
tempfile = "3.0"
rand = "0.8"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.bench]
lto = true
codegen-units = 1
