[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "pyblaze"
version = "0.1.0"
description = "High-performance embedded OLAP query engine with native Arrow/Parquet support"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["database", "olap", "query-engine", "analytics", "arrow", "parquet", "sql"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Database",
    "Topic :: Scientific/Engineering",
]
dependencies = []

[project.optional-dependencies]
arrow = ["pyarrow>=10.0.0"]
polars = ["polars>=0.15.0"]
pandas = ["pandas>=1.3.0", "pyarrow>=10.0.0"]
all = ["pyarrow>=10.0.0", "polars>=0.15.0", "pandas>=1.3.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-benchmark>=4.0.0",
    "pyarrow>=10.0.0",
    "polars>=0.15.0",
    "pandas>=1.3.0",
    "numpy>=1.20.0",
]

[project.urls]
Homepage = "https://github.com/blaze-db/blaze"
Documentation = "https://github.com/blaze-db/blaze#readme"
Repository = "https://github.com/blaze-db/blaze"
Issues = "https://github.com/blaze-db/blaze/issues"

[tool.maturin]
features = ["python"]
python-source = "python"
module-name = "pyblaze"

[tool.pytest.ini_options]
testpaths = ["python/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
