[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "blaze-sql-kernel"
version = "0.1.0"
description = "Jupyter kernel for the Blaze SQL Query Engine"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.0",
    "pyblaze>=0.1.0",
]
